n3yron/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - n3yron.nebula.video
    secretName: grafana-tls
  rules:
   - host: n3yron.nebula.video
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: eks-grafana
                port: 
                  number: 8080
